--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # List of Collaborators in this project
 
-Oluwaseun Afolabi <oluwaseunafolabi941@gmail.com>
-Marvelous Egbe
+Mojeed Oloruntosin <mojeedoloruntosin@gmail.com>
+Ajayi Oluwatosin <ajayioluwatosin777@gmail.com>
